# mcp-vs-direct-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-08-benchmark-design.md  2026-03-08-implementation-plan.md
results/: benchmark-2026-03-09-0847.md  benchmark-2026-03-09-0852.md  benchmark-2026-03-09-0920.md  benchmark-2026-03-09-0924.md  benchmark-2026-03-09-0933.md  benchmark-2026-03-09-0939.md  benchmark-2026-03-09-0949.md  benchmark-2026-03-09-1015.md  benchmark-2026-03-09-1021.md  benchmark-2026-03-09-1037.md  traces-2026-03-09-0939.json  traces-2026-03-09-0949.json  traces-2026-03-09-1015.json  traces-2026-03-09-1021.json  traces-2026-03-09-1037.json
src/: benchmark.py
src/harness/: reporter.py  runner.py
src/tools/mcp/: client.py
tests/: test_cli_tools.py  test_direct_tools.py  test_harness.py  test_mcp_tools.py
